--- a/lesson03/assignment/css/style.scss
+++ b/lesson03/assignment/css/style.scss
@@ -19,14 +19,15 @@ html {
   border: 40px solid $darkgray;
   display: grid;
   width: 75%;
+  height: 50%;
   padding: 2rem;
 }
 
 .header{
     grid-column-start: 1;
     grid-column-end: 2;
-    position: relative;
-    left: 75px;
+    //position: relative;
+    //left: px;
     &-image {
         border-radius: 50%;
         width: 25%;
@@ -36,14 +37,24 @@ html {
 .info {
   background-color: $gray;//gray
   padding: 2rem;
-  display: inline-block;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  display: inline-block; 
+  //grid-column-start: 2;
+  //grid-column-end: 3;
+  position: relative;
+  left: 400px;
+  bottom: 150px;
   &-text {
     color: $darkgray;
   }
+  &-linkedin {
+    text-align: right;
+    position: relative;
+    bottom: 100px;
+    right: 200px;
+  }
   &-linkedin img {
-    float: left;
+    //float: left;
+  
 }
 }
 
