--- a/lesson05/assignment/css/_settings.variables.scss
+++ b/lesson05/assignment/css/_settings.variables.scss
@@ -1,1 +1,7 @@
 // Colors
+$pink: 	#ffc0cb;
+$red: 	#FF0000;
+$lightgreen: #90EE90; 
+$lightpurple:#CBC3E3;
+$orange: 	#ffa500;
+$lightblue: #add8e6;
