--- a/lesson05/assignment/css/style.scss
+++ b/lesson05/assignment/css/style.scss
@@ -4,3 +4,72 @@
 @import 'settings.responsive';
 @import 'components.content';
 
+* {
+    box-sizing: border-box;
+
+  }
+// Display Grid sets Main class as gird container
+.main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+// placement of header of overall grid
+header {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 5;
+    text-align: center;
+    // style
+    background-color: $red;
+}
+// placement of navigation bar on grid
+nav {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 5;
+    // style 
+    background-color: $lightgreen;
+}
+
+.nav__list {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
+  align-items: center;
+}
+// placement of asdie bar on grid
+aside {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 2;
+    padding: 50px;
+    // style
+    background-color: $lightpurple;
+    // media query
+    @include media-query('mobile'){
+        grid-area: 3/ 1/ span 1/ span 5;
+      }
+
+}
+// placement of main section on grid
+section {
+    grid-row: 3 / span 1; 
+    grid-column: 3 / span 3;
+    padding: 50px;
+    background-color: $orange;
+    // media query
+    @include media-query('mobile'){
+        grid-area: 4/1/span 1/ span 5;
+     } 
+}
+// placement of footer on grid
+footer {
+    grid-row: 5 / span 1;
+    grid-column: 1 /span 5;
+    // style
+    background-color: $lightblue;
+}
+
+.footer__list {
+    display: flex;
+    list-style-type: none;
+    justify-content: space-around;
+    align-items: center;
+}
